Inserting notes (#85)
* Initial Commit

* Add UpsertNviCandidateStatusHandler

* Temp commit

* tmp

* Major cleanup

- Move to/from dynamodb to defautl interface

- Remove the need for api in commons
- Consider custom exceptions from nviservice

- Added builders

* Almost there

* It builds

* Temp commit

* There and back again

* Update openapi.yaml

* Update template.yaml and rename to Update

* Correct name in openapi.yaml

* Remove unnecessary field

* Cleanup aisle #5

* Move db models to their new home

* Cleanup

* Fix Codacy...

* Fix Codacy....

* Remember to rename everything :)

* Add authorization

* Created rest note

* Add multiple Notes

* Cleanup

* Cleanup

* Fix merge conflicts

* Fix merge conflicts

* Remove local issue

* Add create note to openapi.yaml and template.yaml

* Add missing tests

* Cleanup

* Fix based on feedback

* var

* Codacy...

* Conflicthandling

---------

Co-authored-by: Haakon Heiberg <haakon.heiberg@sikt.no>